fix visibility and timezone

--- a/resources/scss/_generics.scss
+++ b/resources/scss/_generics.scss
@@ -1,3 +1,7 @@
+body {
+    visibility: visible !important;
+}
+
 main {
     height: calc(100vh - 84.13px);
 }
